# ToyFrameV

./: .gitignore  CMakeLists.txt  README.md  build_web.ps1  build_web.sh
.github/: copilot-instructions.md
cmake/: Platform.cmake
docs/: WebGL_Build.md  Xvfb_Usage.md
include/: ToyFrameV.h
include/ToyFrameV/: App.h  Graphics.h  GraphicsSystem.h  IOSystem.h  Input.h  InputSystem.h  KeyCodes.h  Platform.h  System.h  TimerSystem.h  Window.h  WindowSystem.h
include/ToyFrameV/Core/: Log.h  Threading.h
include/ToyFrameV/Graphics/: Buffer.h  Context.h  Pipeline.h  RenderTexture.h  Shader.h  Types.h
include/ToyFrameV/Platform/: FileDownload.h  FileSystem.h
roadmap/: cross_platform_graphics_framework.md
samples/: CMakeLists.txt
samples/HelloApp/: CMakeLists.txt  main.cpp
samples/HelloIO/: CMakeLists.txt  main.cpp
samples/HelloRenderTexture/: CMakeLists.txt  main.cpp
samples/HelloThreadLog/: CMakeLists.txt  main.cpp
samples/HelloTimer/: CMakeLists.txt  main.cpp
samples/HelloTriangle/: CMakeLists.txt  main.cpp
scripts/: build_web.ps1  build_web.sh  build_windows.bat  run_with_xvfb.sh  test_examples.sh
scripts/linux/: build_web.sh  run_with_xvfb.sh  test_examples.sh
scripts/windows/: build.ps1  build_web.ps1
src/: App.cpp  CMakeLists.txt  Input.cpp
src/Core/: Log.cpp  Threading.cpp
src/Graphics/: Graphics.cpp  LLGLSurfaceAdapter.cpp  RenderTexture.cpp
src/Graphics/Backend/: IGraphicsBackend.h
src/Graphics/Backend/LLGL/: LLGLBackend.cpp  LLGLBackend.h  LLGLSurfaceAdapter.cpp  LLGLSurfaceAdapter.h  LLGLTypes.h
src/Platform/: PlatformWeb.cpp
src/Platform/Android/: PlatformAndroid.cpp
src/Platform/Desktop/: FileDownloadDesktop.cpp
src/Platform/Linux/: InputLinux.cpp  PlatformLinux.cpp  WindowLinux.cpp
src/Platform/Unix/: FileSystemUnix.cpp
src/Platform/Web/: FileDownloadWeb.cpp  FileSystemWeb.cpp  PlatformWeb.cpp
src/Platform/Windows/: FileSystemWindows.cpp  InputWindows.cpp  PlatformWindows.cpp  WindowWindows.cpp
src/Platform/iOS/: PlatformiOS.mm
src/Platform/macOS/: PlatformMacOS.mm
src/System/: GraphicsSystem.cpp  IOSystem.cpp  InputSystem.cpp  SystemManager.cpp  TimerSystem.cpp  WindowSystem.cpp
src/Window/: WindowWindows.cpp
web/: template.html
